fix: ajustar z-index e animações do componente de cookies para melhor visibilidade e transição

--- a/src/app/components/cookies/cookies.component.scss
+++ b/src/app/components/cookies/cookies.component.scss
@@ -10,7 +10,7 @@
     background-color: #f8f9fa;
     padding: 1rem;
     border-top: 1px solid #dee2e6;
-    z-index: 1000;
+    z-index: 1000000;
     border-radius: 8px;
 
     h2,
